[metadata]
name = menu-driven-figure
version = 0.0.1
author = Samuel Minot
author_email = sminot@fredhutch.org
description = Render a figure based on user inputs from a configurable set of menus
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/FredHutch/menu-driven-figures
project_urls =
    Bug Tracker = https://github.com/FredHutch/menu-driven-figures/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires = 
    dash>=1.20.0
    dash_bootstrap_components>=0.12.2
    dash_core_components>=1.16.0
    dash_html_components>=1.1.3
    pandas>=1.1.0
    numpy>=1.19.0
    plotly>=4.14.0
    scipy>=1.5.0
python_requires = >=3.6

[options.packages.find]
where = src